--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1> My Hubs </h1>
+<h1> My Hub </h1>
+
+<h2>Share a Blurb to start a conversation:</h2>
+
+<form action="{% url 'blurb_create' %}" method="post">
+    {% csrf_token %}
+    <input
+        class="input"
+        type="text"
+        name="name"
+        placeholder="name"
+        required=""
+    />
+    <input
+        class="input"
+        type="text"
+        name="content"
+        placeholder="Start a conversation..."
+    />
+    <input
+        class="button is-primary" 
+        type="submit" 
+        value="Add Blurb"
+    />
+</form>
 
 {% for blurb in blurbs %}
 
