--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -8,17 +8,19 @@
     {% csrf_token %}
     <input
         class="input"
-        type="text"
-        name="name"
-        placeholder="name"
+        type="hidden"
+        name="{{user}}"
         required=""
     />
-    <input
+    <textarea
         class="input"
         type="text"
+        rows="4"
+        cols="50"
         name="content"
         placeholder="Start a conversation..."
-    />
+        required=""
+    ></textarea>
     <input
         class="button is-primary" 
         type="submit" 
@@ -28,7 +30,7 @@
 
 {% for blurb in blurbs %}
 
-<p>{{blurb.name}}</p>
+<p>{{blurb.user}}</p>
 <p>{{blurb.content}}</p>
 
 {% endfor %}
