delete blurb in process

--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -32,6 +32,7 @@
 
 <p>{{blurb.user}}</p>
 <p>{{blurb.content}}</p>
+<a href="/{{blurb.id}}/delete" class="button is-danger">Delete Blurb</a>
 
 {% endfor %}
 {% endblock %}
