--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -7,6 +7,13 @@
     <title>DadHub</title>
 </head>
 <body>
+    <nav> 
+        <div>
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'signup' %}">Sign Up</a>
+            <a href="{% url 'logout' %}">Logout</a>        
+        </div>
+    </nav>
     {% block content%}
 
     {% endblock %}
