--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -47,7 +47,7 @@
         <input
         class="input"
         type="hidden"
-        value={{blurb.id}}
+        name="{{blurb.id}}"
         required=""
         />
         <input
