--- a/dad_hub/templates/backupform.html
+++ b/dad_hub/templates/backupform.html
@@ -1,33 +1,21 @@
-<!-- <form action="{% url 'response_create' %}" method="post">
-        {% csrf_token %}
-        <input
+form method="post" action="{% url 'profile_create' %}">
+    {% csrf_token %}
+    <div class="control">
+        <input 
             class="input"
             type="hidden"
             name="{{user}}"
             required=""
         />
-        <input
-        class="input"
-        type="hidden"
-        name="{{blurb.id}}"
-        required=""
-        />
-        <input
-        class="input"
-        type="hidden"
-        name="{{response}}"
-        />
-        <textarea
+    </div>
+    <div class="control">
+        <input 
             class="input"
             type="text"
-            rows="3"
-            cols="30"
-            name="content"
-            required=""
-        ></textarea>
-        <input
-            class="button is-primary"
-            type="submit"
-            value="Add Response"
+            name="zip_code"
         />
-    </form> -->
+    </div>
+    <div class="control">
+        <input type="submit" class="btn" value="Create"/>
+    </div>
+</form>
