trying again. migration failed w/ tag field

--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -34,6 +34,12 @@
     placeholder="add a link"
     />
     <input
+        class="input"
+        type="text"
+        name="tags"
+        placeholder="tags"
+    />
+    <input
         class="button is-primary" 
         type="submit" 
         value="Add Blurb"
