--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     <title>DadHub</title>
 </head>
 <body>
@@ -12,6 +14,8 @@
             <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'signup' %}">Sign Up</a>
             <a href="{% url 'logout' %}">Logout</a>        
+            <a href="{% url 'blurbs' %}">My Hub</a>        
+            <a href="{% url 'home' %}">Home</a>        
         </div>
     </nav>
     {% block content%}
