--- a/dad_hub/static/styles/main.css
+++ b/dad_hub/static/styles/main.css
@@ -1,11 +1,36 @@
+nav {
+    border: 5px solid red;
+    padding: 10px;
+}
+
+h1 {
+    border: 5px solid red;
+    padding: 10px;
+
+}
+
 .blurbcontainer {
-    border: 5px solid red
+    border: 5px solid red;
+    margin: 20px;
+    padding: 10px;
+
+}
+
+.responsesection {
+    border: 5px solid orange;
+    padding: 10px;
+
+
 }
 
 .responselist {
-    border: 5px solid orange
+    border: 5px solid yellow;
+    padding: 10px;
+
 }
 
 .responsecontainer {
-    border: 5px solid yellow
+    border: 5px solid green;
+    padding: 10px;
+
 }
