--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -1,12 +1,15 @@
 {% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'home/css/bootstrap.css' %}"/>
     <title>DadHub</title>
+</head>
 </head>
 <body>
     <nav> 
@@ -21,5 +24,6 @@
     {% block content%}
 
     {% endblock %}
+    <script src="{% static 'home/js/bootrap.bundle.js' %}"></script>
 </body>
 </html>
