tag input works

--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -36,7 +36,8 @@
         type="text"
         name="tags"
         placeholder="tags"
-    />
+        multiple>
+
     <input
         class="button is-primary" 
         type="submit" 
