--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -101,7 +101,7 @@
 
                 {% for response in responses %}
                 {% if response.blurb_id == blurb.id%}
-                <div class="p-2">
+                <div class="p-2 border mb-1" >
                     <p><strong>{{response.user}}</strong></p>
                     <p class="p-2">{{response.content}}</p>
                 </div>
