blurb page responsive

--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -9,6 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/bootstrap.css' %}"/>
     <title>DadHub</title>
+    <style>
+        [class *='col']{
+            background-color: gray;
+            border: 2px solid black;
+            color: black
+        }
+    </style>
 </head>
 </head>
 <body>
