--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h1>DadHub</h1></a>
+          <a class="navbar-brand" href="{% url 'home' %}"><h1>DadHub</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,7 +28,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Log In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'signup' %}">Log Out</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Log Out</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'signup' %}">Sign Up</a>
