--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -107,6 +107,12 @@
     
                             <p><strong>{{response.user}}</strong></p>
                             <p class="p-2">{{response.content}}</p>
+                            {% if user == response.user %}
+                            <div>
+                                <a href="/{{response.id}}/delete/" class="btn mb-2 btn-outline-warning btn-sm">Delete</a>
+                
+                            </div>
+                            {% endif %}
                         
                       </div>
                         
