--- a/dad_hub/templates/response_delete_confirmation.html
+++ b/dad_hub/templates/response_delete_confirmation.html
@@ -1,11 +1,14 @@
-{% extends 'base.html' %} 
+
+{% extends 'base.html' %}
 {% block content %}
-<h1> You sure about that Dad? </h1>
-<form method="post">
-    {% csrf_token %}
-    <div class="buttons">
-        <input class="button is-danger" type="submit" value="Yes, delete" />
-        <a class="button is-primary" href="{% url 'home' %}">Nevermind</a>
-    </div>
-</form>
+<div class="container mt-5">
+    <h1> You sure about that Dad? </h1>
+    <form method="post">
+        {% csrf_token %}
+        <div class="buttons">
+            <input type="button" class="btn btn-danger is-danger" type="submit" value="Yes, delete" />
+            <a type="button" class="btn btn-success" href="{% url 'blurbs' %}">Nevermind</a>
+        </div>
+    </form>
+</div>
 {% endblock %}
