--- a/dad_hub/templates/blurb_detail.html
+++ b/dad_hub/templates/blurb_detail.html
@@ -70,7 +70,9 @@
                     
                     <p><strong>{{response.user}}</strong></p>
                     <p class="p-2">{{response.content}}</p>
-                    
+                    {% if user == response.user %}
+                    <a href="/blurbs/{{response.id}}/delete" class="button is-danger">Delete</a>
+                {% endif %}
             </div>
 
 
