--- a/dad_hub/templates/blurb_detail.html
+++ b/dad_hub/templates/blurb_detail.html
@@ -71,7 +71,7 @@
                     <p><strong>{{response.user}}</strong></p>
                     <p class="p-2">{{response.content}}</p>
                     {% if user == response.user %}
-                    <a href="/blurbs/{{response.id}}/delete" class="button is-danger">Delete</a>
+                    <a href="/blurbs/{{response.id}}/delete" class="btn mb-2 btn-outline-warning btn-sm">Delete</a>
                 {% endif %}
             </div>
 
