--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -24,15 +24,19 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'blurbs' %}">My Hub</a>
               </li>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Log Out</a>
+              </li>
+              {% else %}
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Log In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Log Out</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'signup' %}">Sign Up</a>
               </li>
+              {% endif %}
+           
               
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
