--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -5,7 +5,7 @@
 
     <h1> My Hub </h1>
 </div>
-
+{% if request.user.is_authenticated %}
 <div class="container mt-5 mb-5">
     <div class="row">
 
@@ -39,13 +39,13 @@
         </div>
         <div class="row">
             <div class="col-1">
-                <input class="button btn-secondary is-primary" type="submit" value="Add Blurb" />
+                <button class="btn btn-secondary btn-sm" type="submit">Add Blurb</button>
             </div>
         </div>
         </form>
     </div>
 </div>
-
+{% endif %}
 <div class="container-sm">
     <!-- blurb section container  -->
     <div class="row">
@@ -118,7 +118,7 @@
                             <p class="p-2">{{response.content}}</p>
                             {% if user == response.user %}
                             <div>
-                                <a href="/blurbs/{{blurb.id}}/responses/{{response.id}}/delete/" class="btn mb-2 btn-outline-warning btn-sm">Delete</a>
+                                <a href="/blurbs/{{response.id}}/delete" class="btn mb-2 btn-outline-warning btn-sm">Delete</a>
                 
                             </div>
                             {% endif %}
