--- a/dad_hub/templates/registration/signup.html
+++ b/dad_hub/templates/registration/signup.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Sign Up</h1>
-<form method="post" action="{% url 'signup' %}">
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="mb-4 mt-4">Sign Up</h1>
+            <form method="post" action="{% url 'signup' %}">
+            
+                {% csrf_token %} {{form.as_p}}
+                <input type="submit" class="btn btn-sm btn-primary" value="Sign Up"/>
+                <input type="hidden" name="next" value="{{ next }}"/>
+            </form>
 
-    {% csrf_token %} {{form.as_p}}
-    <input type="submit" class="btn" value="Sign Up"/>
-    <input type="hidden" name="next" value="{{ next }}"/>
-</form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
