--- a/dad_hub/templates/blurb_detail.html
+++ b/dad_hub/templates/blurb_detail.html
@@ -61,7 +61,7 @@
             </div>
             
         </div>
-        <div class="col p-3 border bg-light response-col w-100">
+        <div class="col p-3 bg-secondary response-col w-100">
                 
                 {% for response in responses %}
                 {% if response.blurb_id == blurb.id%}
