home, blurbs and blurb detail styled

--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -15,9 +15,9 @@
             </div >
             <div class="d-flex align-items-center justify-content-center">
                                     
-                <a href="/accounts/login" class="btn btn-primary btn-lg m-5">Log In</a>
-                <a href="/accounts/signup" class="btn btn-success btn-lg m-5">Sign Up</a>
-                <a href="/blurbs" class="btn btn-secondary btn-lg m-5">Just Looking</a>
+                <a href="/accounts/login" class="btn border-0 shadow btn-primary btn-lg m-5">Log In</a>
+                <a href="/accounts/signup" class="btn border-0 shadow btn-success btn-lg m-5">Sign Up</a>
+                <a href="/blurbs" class="btn border-0 shadow btn-secondary btn-lg m-5">Just Looking</a>
             </div>
 
         </div>
