--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/bootstrap.css' %}"/>
     <title>DadHub</title>
     
+    <style>
+    
+      
+  </style>
 </head>
 </head>
-<body>
+<body style="background-color: #CEE4DE">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid bg-success">
-          <a class="navbar-brand" href="{% url 'home' %}"><h1>DadHub</h1></a>
+        <div class="container-fluid" style="background-color: #2F3052">
+          <a class="navbar-brand" style="color: #CEE4DE" href="{% url 'home' %}"><h1>DadHub</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,24 +42,11 @@
               {% endif %}
            
               
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li> -->
+        
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn shadow-lg outline-0 btn-info" type="submit">Search</button>
             </form>
           </div>
         </div>
