--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="page-title bg-secondary pt-2 pb-2 ps-5 border">
+<div class="page-title pt-2 pb-2 ps-5" style="background-color: #3B876E">
 
-    <h1 class=""> My Hub </h1>
+    <h1 style="color: #CEE4DE"> My Hub </h1>
 </div>
 {% if request.user.is_authenticated %}
-<div class="d-flex align-items-center justify-content-center">
-    <div class="container bg-secondary pt-4 pb-4 mt-5 mb-5">
+<div class="d-flex align-items-center justify-content-center" >
+    <div class="container shadow-lg pt-4 pb-4 mt-5 mb-5 rounded" style="background-color: #2F3052">
         <div class="row">
             
 
@@ -49,7 +49,7 @@
                                 <div class="row ps-5">
                                     <div class="col-1">
 
-                                        <button class="btn btn-info btn-sm" type="submit">Add Blurb</button>
+                                        <button class="btn shadow-lg border-0 btn-info btn-sm" type="submit">Add Blurb</button>
                                     </div>
                                 </div>
                             
@@ -66,16 +66,16 @@
         <!-- blurb section row -->
 
         {% for blurb in blurbs %}
-        <div class="col-md m-2" style="min-width: 250px; max-width: 500px">
+        <div class="col-md m-2" style="min-width: 250px; max-width: 500px ">
             <!-- each blurb col -->
 
             <div class="container blurb_container p-2">
 
 
-                <div class="row border blurb-response row">
-                    <div class="col blurb-col bg-secondary">
+                <div class="row border blurb-response row ">
+                    <div class="col w-75 border-0 blurb-col shadow-lg rounded" style="background-color: #3B876E">
 
-                        <div class="card w-100 h-80 mt-2 mb-2 border-0 bg-secondary">
+                        <div class="card w-100 h-80 mt-2 mb-2 border-0" style="background-color: #3B876E">
                             {% if blurb.image != "" %}
                             <img src="{{blurb.image}}" class="card-img-top" alt="...">
                             {% endif %}
@@ -89,7 +89,7 @@
                             {% endif %}
                             {% endfor %}
 
-                            <div class="card-body border-0 bg-light">
+                            <div class="card-body border-0 rounded bg-light">
                                 <p class="card-text">{{blurb.content}}</p>
                                 {% if blurb.link != "" %}
                                 <p>Link:</p>
@@ -112,16 +112,16 @@
                             </div>
                             <div>
 
-                                <a href="/blurbs/{{blurb.id}}" class="btn btn-success btn-sm mb-2">Add a Response</a>
+                                <a href="/blurbs/{{blurb.id}}" class="btn shadow-lg btn-info btn-sm mb-2">Add a Response</a>
                             </div>
                         </div>
                         <!-- blurb col -->
                     </div>
 
 
-                    <div class="col-3 p-3 bg-secondary response-col w-100">
+                    <div class="col-3 p-3 response-col w-100" style="background-color: #2F3052">
                         <div class="d-flex align-items-center justify-content-center">
-                            <a class="btn btn-info m-3" data-toggle="collapse" href="#a{{blurb.id}}responses"
+                            <a class="btn shadow-lg btn-info m-3" data-toggle="collapse" href="#a{{blurb.id}}responses"
                                 role="button" aria-expanded="false" aria-controls="collapseExample">
                                 Responses
                             </a>
