--- a/dad_hub/templates/base.html
+++ b/dad_hub/templates/base.html
@@ -17,24 +17,24 @@
 </head>
 </head>
 <body style="background-color: #CEE4DE">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" style="background-color: #2F3052">
-          <a class="navbar-brand" style="color: #CEE4DE" href="{% url 'home' %}"><h1>DadHub</h1></a>
+    <nav class="navbar border-0 m-0 p-0 navbar-expand-lg navbar-light bg-light" style="background-color: #2F3052">
+        <div class="container-fluid border-0 m-0" style="background-color: #2F3052">
+          <a class="navbar-brand" style="color: #CEE4DE" href="{% url 'blurbs' %}"><h1>DadHub</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'blurbs' %}">My Hub</a>
+                <a class="nav-link active" style="color: #CEE4DE" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               {% if request.user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Log Out</a>
+                <a class="nav-link active" style="color: #CEE4DE" aria-current="page" href="{% url 'logout' %}">Log Out</a>
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Log In</a>
+                <a class="nav-link active" style="color: #CEE4DE" aria-current="page" href="{% url 'login' %}">Log In</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'signup' %}">Sign Up</a>
