--- a/dad_hub/templates/home.html
+++ b/dad_hub/templates/home.html
@@ -13,7 +13,7 @@
                 <h3>Who Can Join DadHub?</h3>
                 <p>DadHub is for anyone who identifies as a dad or father-figure, regardless of age, race, religion, socioeconomic status, sexual orientation or gender assigned at birth. Bio-dads, adoptive-dads, step-dads, grand-dads, queer dads, foster dads, etc, are all welcome!</p>
             </div >
-            <div class="d-flex align-items-center justify-content-center">
+            <div class="d-flex align-items-center justify-content-center ms-10 me-10">
                                     
                 <a href="/accounts/login" class="btn border-0 shadow btn-primary btn-lg m-5">Log In</a>
                 <a href="/accounts/signup" class="btn border-0 shadow btn-success btn-lg m-5">Sign Up</a>
