bio page responsive for mobile

--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -79,7 +79,7 @@
 
                         <div class="card w-100 h-80 mt-2 mb-2 border-0" style="background-color: #3B876E">
                             {% if blurb.image != "" %}
-                            <img src="{{blurb.image}}" class="card-img-top" alt="...">
+                            <img src="{{blurb.image}}" class="card-img-top" alt="photo in blurb">
                             {% endif %}
                             <h5 class="text-dark mt-2">{{blurb.user}}</h5>
                             {% for bio in bios%}
